compiler/packages/babel-plugin-react-compiler/src/__tests__/fixtures/compiler/exhaustive-deps/error.invalid-exhaustive-effect-deps-missing-only.js
// @validateExhaustiveEffectDependencies:"missing-only"
import {useEffect} from 'react';

function Component({x, y, z}) {
  // error: missing dep - x
  useEffect(() => {
    log(x);
  }, []);

  // no error: extra dep not reported in missing-only mode
  useEffect(() => {
    log(x);
  }, [x, y]);

  // error: missing dep - z (extra dep - y not reported)
  useEffect(() => {
    log(x, z);
  }, [x, y]);

  // error: missing dep x
  useEffect(() => {
    log(x);
  }, [x.y]);
}
